[package]
name = "RusTTD"
version = "0.1.1"
edition = "2024"

[dependencies]
crossterm = "0.27"
ratatui = "0.24"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Web server dependencies
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
